docs: update releases notes and compatibility for rosetta and GraphQL

--- a/docs/developer-resources/07-release-notes/03-comp-matrix.mdx
+++ b/docs/developer-resources/07-release-notes/03-comp-matrix.mdx
@@ -16,7 +16,7 @@ version [9.1.1](https://github.com/IntersectMBO/cardano-node/releases/tag/9.1.1)
 
 | [Cardano node](https://github.com/IntersectMBO/cardano-node/releases)                          | [Cardano DB Sync](https://github.com/IntersectMBO/cardano-db-sync/releases)                                                                                                                                                         | [Cardano Rosetta server](https://github.com/cardano-foundation/cardano-rosetta/releases)                                                                            | [Cardano Rosetta Java](https://github.com/cardano-foundation/cardano-rosetta-java)     | [Cardano GraphQL](https://github.com/cardano-foundation/cardano-graphql/releases)                                                                                   | [Cardano wallet](https://github.com/cardano-foundation/cardano-wallet/releases)                                                                                                         |
 |------------------------------------------------------------------------------------------------|-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|---------------------------------------------------------------------------------------------------------------------------------------------------------------------|:---------------------------------------------------------------------------------------|---------------------------------------------------------------------------------------------------------------------------------------------------------------------|-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
-| **[10.1.2](https://github.com/IntersectMBO/cardano-node/releases/tag/10.1.2)** (update)        |                                                                                                                                                                                                                                     |                                                                                                                                                                     | [1.1.0](https://github.com/cardano-foundation/cardano-rosetta-java/releases/tag/1.1.0) |                                                                                                                                                                     |                                                                                                                                                                                         |
+| **[10.1.2](https://github.com/IntersectMBO/cardano-node/releases/tag/10.1.2)** (update)        |                                                                                                                                                                                                                                     | [2.4.0](https://github.com/cardano-foundation/cardano-rosetta/releases/tag/2.4.0)                                                                                   | [1.1.0](https://github.com/cardano-foundation/cardano-rosetta-java/releases/tag/1.1.0) | [8.3.0](https://github.com/cardano-foundation/cardano-graphql/releases/tag/8.3.0)                                                                                   |                                                                                                                                                                                         |
 | **[10.1.1](https://github.com/IntersectMBO/cardano-node/releases/tag/10.1.1)** (major release) |                                                                                                                                                                                                                                     |                                                                                                                                                                     |                                                                                        |                                                                                                                                                                     |                                                                                                                                                                                         |
 | **[9.2.1](https://github.com/IntersectMBO/cardano-node/releases/tag/9.2.1)** (minor fix)       |                                                                                                                                                                                                                                     |                                                                                                                                                                     |                                                                                        |                                                                                                                                                                     | [v2024-09-29](https://github.com/cardano-foundation/cardano-wallet/releases/tag/v2024-09-29)                                                                                            |
 | **[9.2.0](https://github.com/IntersectMBO/cardano-node/releases/tag/9.2.0)** (update)          |                                                                                                                                                                                                                                     |                                                                                                                                                                     | [1.0.0](https://github.com/cardano-foundation/cardano-rosetta-java/releases/tag/1.0.0) |                                                                                                                                                                     |                                                                                                                                                                                         |
