--- a/docs/pioneer-programs/01-community-education.mdx
+++ b/docs/pioneer-programs/01-community-education.mdx
@@ -17,6 +17,7 @@ Contributions are encouraged! Share your educational resources to expand this li
 ## Community education resources
 
 -   [Cardano Academy](https://academy.cardanofoundation.org/) – learn about blockchain – empowering the digital architects of the future
+-   [IO Academy YouTube channel](https://www.youtube.com/channel/UCX9j__vYOJu00iqBrCzecVw) – explore learning resources and check out [this section](/pioneer-programs/education/) for more details
 -   [Emurgo Academy](https://www.emurgo.io/academy/) – training developers and professionals for a Web3 future
 -   [Gimbalabs](https://www.gimbalabs.com/gimbalgrid) – a space for people to learn about and participate in the Cardano blockchain
 -
