--- a/docs/pioneer-programs/02-education.mdx
+++ b/docs/pioneer-programs/02-education.mdx
@@ -10,9 +10,9 @@ Education is a cornerstone of fostering a knowledgeable and engaged global commu
 
 The team brings together extensive experience in curriculum design, project management, and the technical intricacies of Cardano, Haskell, and smart contracts. This collective skill set ensures that educational programs are comprehensive, practical, and tailored to diverse learners' needs.
 
-## Partnerships
+## Collaborations
 
-The IO education team has partnerships with various universities and educational institutions worldwide to deliver high-quality education, including:
+The IO education team has collaborations with various universities and educational institutions worldwide to deliver high-quality education, including:
 
 -   [University of Edinburgh](https://www.ed.ac.uk/), where there is a blockchain laboratory run by IO’s chief scientist, [Prof Aggelos Kiayias](https://iohk.io/en/leadership/aggelos-kiayias), and his research team
 -   [University of Athens](https://en.uoa.gr/)
@@ -20,7 +20,8 @@ The IO education team has partnerships with various universities and educational
 -   [University of Wyoming](https://www.uwyo.edu/index.html)
 -   [Carnegie Mellon University](https://www.cmu.edu/)
 -   [European Business University of Luxembourg](https://ebulux.lu/)
--   [University of Malta](https://www.um.edu.mt/).
+-   [University of Malta](https://www.um.edu.mt/)
+-   [University of Cantabria](https://web.unican.es/en/Pages/default.aspx)
 
 Additionally, the team has worked on curriculum design for blockchain programs with Yeovil College in the UK and Consilium Academy in South Africa.
 
@@ -37,6 +38,8 @@ The education team has held several Cardano Day events across different location
 -   [University of Celaya,](https://www.udec.edu.mx/en/) Guanajuato, Mexico
 -   [University of Malta](https://www.um.edu.mt/), Valletta Campus, Valletta, Malta
 -   [University of Wyoming](https://www.uwyo.edu/index.html), Laramie, USA.
+-   [University of Cantabria](https://web.unican.es/en/Pages/default.aspx)
+
     
 These events cover the basics of blockchain technology, Cardano, and smart contracts and prove very popular, with a typical NPS score of 92.
 
