--- a/docs/developer-resources/welcome.mdx
+++ b/docs/developer-resources/welcome.mdx
@@ -75,11 +75,13 @@ To start working with smart contracts, see:
 
 There are also many languages you can use to develop smart contracts:
 
-- [Aiken](https://github.com/aiken-lang/aiken) (Rust-like language)
-- [PlutusTx](https://github.com/IntersectMBO/plutus/tree/master/plutus-tx) (Haskell-based language for high assurance)
-- [Marlowe](https://github.com/input-output-hk/marlowe-cardano) (TypeScript),  [Plu-ts](https://github.com/HarmonicLabs/plu-ts) (TypeScript)
+- [Aiken](https://github.com/aiken-lang/aiken) (DSL)
+- [Plutarch](https://github.com/Plutonomicon/plutarch-plutus) (Haskell-based eDSL)
+- [PlutusTx](https://github.com/IntersectMBO/plutus/tree/master/plutus-tx) (Haskell)
+- [Plu-ts](https://github.com/HarmonicLabs/plu-ts) (TypeScript)
 - [OpShin](https://github.com/OpShin/opshin) (Python)
-- [Scalus](https://github.com/nau/scalus) (Scala).
+- [Scalus](https://github.com/nau/scalus) (Scala)
+- [Marlowe](https://github.com/input-output-hk/marlowe-cardano) (DSL)  
 
 ## Tools
 
