--- a/docs/developer-resources/welcome.mdx
+++ b/docs/developer-resources/welcome.mdx
@@ -81,7 +81,7 @@ There are also many languages you can use to develop smart contracts:
 - [Plu-ts](https://github.com/HarmonicLabs/plu-ts) (TypeScript)
 - [OpShin](https://github.com/OpShin/opshin) (Python)
 - [Scalus](https://github.com/nau/scalus) (Scala)
-- [Marlowe](https://github.com/input-output-hk/marlowe-cardano) (DSL)  
+- [Marlowe](https://github.com/input-output-hk/marlowe-cardano) (DSL).  
 
 ## Tools
 
