--- a/docs/developer-resources/07-release-notes/03-comp-matrix.mdx
+++ b/docs/developer-resources/07-release-notes/03-comp-matrix.mdx
@@ -16,6 +16,7 @@ version [10.1.2](https://github.com/IntersectMBO/cardano-node/releases/tag/9.1.1
 
 | [Cardano node](https://github.com/IntersectMBO/cardano-node/releases)                          | [Cardano DB Sync](https://github.com/IntersectMBO/cardano-db-sync/releases)                                                                                                                                                         | [Cardano Rosetta server](https://github.com/cardano-foundation/cardano-rosetta/releases)                                                                            | [Cardano Rosetta Java](https://github.com/cardano-foundation/cardano-rosetta-java)     | [Cardano GraphQL](https://github.com/cardano-foundation/cardano-graphql/releases)                                                                                   | [Cardano wallet](https://github.com/cardano-foundation/cardano-wallet/releases)                                                                                                         |
 |------------------------------------------------------------------------------------------------|-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|---------------------------------------------------------------------------------------------------------------------------------------------------------------------|:---------------------------------------------------------------------------------------|---------------------------------------------------------------------------------------------------------------------------------------------------------------------|-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
+| **[10.1.4](https://github.com/IntersectMBO/cardano-node/releases/tag/10.1.4)** (update)        |                                                                                                                                                                                                                                     |                                                                                                                                                                     |                                                                                        |                                                                                                                                                                     |                                                                                                                                                                                         |
 | **[10.1.3](https://github.com/IntersectMBO/cardano-node/releases/tag/10.1.3)** (update)        | [13.6.0.4](https://github.com/IntersectMBO/cardano-db-sync/releases/tag/13.6.0.4)                                                                                                                                                   | [2.4.2](https://github.com/cardano-foundation/cardano-rosetta/releases/tag/2.4.2)                                                                                   | [1.1.3](https://github.com/cardano-foundation/cardano-rosetta-java/releases/tag/1.1.3) | [8.3.2](https://github.com/cardano-foundation/cardano-graphql/releases/tag/8.3.2)                                                                                   |                                                                                                                                                                                         |
 | **[10.1.2](https://github.com/IntersectMBO/cardano-node/releases/tag/10.1.2)** (update)        | [13.6.0.2](https://github.com/IntersectMBO/cardano-db-sync/releases/tag/13.6.0.2)                                                                                                                                                   | [2.4.1](https://github.com/cardano-foundation/cardano-rosetta/releases/tag/2.4.1)                                                                                   | [1.1.1](https://github.com/cardano-foundation/cardano-rosetta-java/releases/tag/1.1.1) | [8.3.0](https://github.com/cardano-foundation/cardano-graphql/releases/tag/8.3.0)                                                                                   | [v2024-11-18](https://github.com/cardano-foundation/cardano-wallet/releases/tag/v2024-11-18)                                                                                            |                                                                                                                                                                                                                                     | [2.4.0](https://github.com/cardano-foundation/cardano-rosetta/releases/tag/2.4.0)                                                                                   | [1.1.0](https://github.com/cardano-foundation/cardano-rosetta-java/releases/tag/1.1.0) | [8.3.0](https://github.com/cardano-foundation/cardano-graphql/releases/tag/8.3.0)                                                                                   | [v2024-11-18](https://github.com/cardano-foundation/cardano-wallet/releases/tag/v2024-11-18)                                                                                            |
 | **[10.1.1](https://github.com/IntersectMBO/cardano-node/releases/tag/10.1.1)** (major release) |                                                                                                                                                                                                                                     |                                                                                                                                                                     |                                                                                        |                                                                                                                                                                     |                                                                                                                                                                                         |
