--- a/docs/about-cardano/05-evolution/04-upgrades/07-chang.mdx
+++ b/docs/about-cardano/05-evolution/04-upgrades/07-chang.mdx
@@ -3,9 +3,11 @@ title: Chang
 metaTitle: Chang - on-chain participatory governance
 ---
 
-The Chang upgrade ushered in the Conway ledger era, a deeply transformative advancement for Cardano's governance, where any ada holder can submit or participate in the voting process for governance actions. The upgrade is happening in two stages, Chang #1 and Chang #2.
+The Chang upgrade ushered in the Conway ledger era, a deeply transformative advancement for Cardano's governance, where any ada holder can submit or participate in the voting process for governance actions. The upgrade is happening in two stages, Chang #1 and Chang #2, now known as the Plomin hard fork.
 
 Conway, named after the eminent mathematician [John Horton Conway](https://en.wikipedia.org/wiki/John_Horton_Conway), builds upon previous phases, emphasizing decentralized decision-making and enhanced smart contract functionalities.
+
+ In November 2024, following the sudden passing of Matthew Plomin, the hard fork working group recommended to rename the second upgrade after him. As a founding partner of the USDM Stablecoin, Matt was instrumental in the construction and regulatory compliance of groundbreaking financial technologies. The renaming has been widely affirmed by the community in a following governance info action. 
 
 ## What does Chang enable?
 
@@ -57,7 +59,7 @@ The goal of the first stage is to ensure security and continuity during the gove
 
 **The second stage/on-chain decision making**  
 
-The second stage, which emphasizes decentralized governance, will be initiated by the community after the bootstrap period is complete. [Intersect](https://www.intersectmbo.org/) will oversee, establish, and help facilitate the community in self-government initiatives for the Cardano ecosystem. All governance entities, including DReps, SPOs, and the interim constitutional committee, can vote on governance actions during this stage. The conclusion of this stage will allow for treasury withdrawals.
+The second stage, which emphasizes decentralized governance, will be initiated by the community after the bootstrap period is complete. The governance action to approve this Plomin hard fork was submitted on chain at the end of epoch 529; December 20, 2025 at 21:44 UTC. [Intersect](https://www.intersectmbo.org/) will oversee, establish, and help facilitate the community in self-government initiatives for the Cardano ecosystem. All governance entities, including DReps, SPOs, and the interim constitutional committee, can vote on governance actions during this stage. The conclusion of this stage will allow for treasury withdrawals.
 
 ## Start testing on SanchoNet
 
@@ -75,4 +77,4 @@ SanchoNet is more than just a testnet, it is a playground of opportunities. With
 
 ## Chang readiness
 
-You can check [engineering and ecosystem readiness for the Chang upgrade here](https://docs.intersectmbo.org/cardano/cardano-upgrades/hard-forks/chang-timeline-and-dependencies/chang-upgrade-1-readiness).
+You can check [engineering and ecosystem readiness for the Plomin upgrade here](https://cardanoupgrades.docs.intersectmbo.org/plomin-upgrade/chang-upgrade-2-readiness).
