--- a/docs/about-cardano/05-evolution/04-upgrades/07-chang.mdx
+++ b/docs/about-cardano/05-evolution/04-upgrades/07-chang.mdx
@@ -55,11 +55,17 @@ An [interim constitution](https://docs.intersectmbo.org/cardano/cardano-governan
 
 During the interim period, only SPOs and the interim constitutional committee can vote on governance actions, including possible protocol parameter changes. As an exception, DReps can participate in 'Info' actions at this stage.
 
-The goal of the first stage is to ensure security and continuity during the governance bootstrapping phase, allowing DReps to register and campaign for delegation, while developing and ratifying a final constitution by early 2025.
+The goal of the first stage is to ensure security and continuity during the governance bootstrapping phase, allowing DReps to register and campaign for delegation, while developing and ratifying a final constitution.
 
 **The second stage/on-chain decision making**  
 
-The second stage, which emphasizes decentralized governance, will be initiated by the community after the bootstrap period is complete. The governance action to approve this Plomin hard fork was submitted on chain at the end of epoch 529; December 20, 2025 at 21:44 UTC. [Intersect](https://www.intersectmbo.org/) will oversee, establish, and help facilitate the community in self-government initiatives for the Cardano ecosystem. All governance entities, including DReps, SPOs, and the interim constitutional committee, can vote on governance actions during this stage. The conclusion of this stage will allow for treasury withdrawals.
+The second stage, which emphasizes decentralized governance, will be initiated by the community after the bootstrap period is complete. The governance action to approve this Plomin hard fork was submitted on chain at the end of epoch 529, December 20, 2025 at 21:44 UTC. [Intersect](https://www.intersectmbo.org/) will oversee, establish, and help facilitate the community in self-government initiatives for the Cardano ecosystem. All governance entities, including DReps, SPOs, and the interim constitutional committee, can vote on governance actions during this stage. The conclusion of this stage will allow for treasury withdrawals.
+
+**The Cardano constitution**
+
+The Cardano Constitutional Convention was held simultaneously in Buenos Aires - Argentina, and Nairobi - Kenya from December 4 to 6, 2024. After 63 workshops across 51 countries, participants came together to refine and strengthen the constitution. The draft constitution was agreed to by 95% of elected delegates. 
+
+The delegate-approved Cardano constitution is the foundational document that translates the community’s values and decisions into a clear set of principles, rules, and responsibilities. It defines the governance framework for the Cardano ecosystem, outlining stakeholders' roles and obligations, including DReps, SPOs, and others. This constitution guides Cardano toward becoming a sustainable platform for Web3 products and services.
 
 ## Start testing on SanchoNet
 
