Update explorers overview
Since Cardano Explorer now redirects to the list of explorers page, the content needed updating.

--- a/docs/about-cardano/02-new-to-cardano/06-cardano-tracking-tools.mdx
+++ b/docs/about-cardano/02-new-to-cardano/06-cardano-tracking-tools.mdx
@@ -8,14 +8,13 @@ recent transactions, block details, and epoch data using different tools.
 
 ## Exploring transactions and blocks
 
-**Cardano Explorer**
+**Cardano explorers**
 
-[Cardano Explorer](https://explorer.cardano.org/en) is a user-oriented tool that
-fetches data from the main database and reflects it in a straightforward and
+There is a list of available [Cardano explorers](https://explorer.cardano.org). These explorers provide user-oriented tools that
+fetch data from the main database and reflect it in a straightforward and
 convenient web interface.
 
-The explorer shows the latest epoch details. You can click the latest epoch and
-see:
+Explorers usually show [epoch](https://www.essentialcardano.io/glossary/epoch-1e938a90) details, which include:
 
 - a number of blocks produced during this epoch
 - time the epoch started
@@ -24,17 +23,11 @@ see:
 - total output in ada.
 
 By choosing a specific block, you can explore it in more detail to see its ID,
-size, epoch and block details, number of included transactions and
+size, epoch and block details, number of included transactions, and
 confirmations.
 
 You can also search for specific epochs, transactions, or blocks by pasting their
 IDs in the search field.
-
-Here are some other explorers to consider:
-
-- [AdaStat](https://adastat.net/transactions)
-- [Cardanoscan](https://cardanoscan.io/transactions)
-- [Cexplorer](https://cexplorer.io/)
 
 ## Exploring assets
 
