--- a/docs/pioneer-programs/02-education.mdx
+++ b/docs/pioneer-programs/02-education.mdx
@@ -38,7 +38,7 @@ The education team has held several Cardano Day events across different location
 -   [University of Celaya,](https://www.udec.edu.mx/en/) Guanajuato, Mexico
 -   [University of Malta](https://www.um.edu.mt/), Valletta Campus, Valletta, Malta
 -   [University of Wyoming](https://www.uwyo.edu/index.html), Laramie, USA.
--   [University of Cantabria](https://web.unican.es/en/Pages/default.aspx)
+-   [University of Cantabria](https://web.unican.es/en/Pages/default.aspx), Santander, Spain
 
     
 These events cover the basics of blockchain technology, Cardano, and smart contracts and prove very popular, with a typical NPS score of 92.
