--- a/docs/about-cardano/05-evolution/04-upgrades/07-chang.mdx
+++ b/docs/about-cardano/05-evolution/04-upgrades/07-chang.mdx
@@ -3,7 +3,7 @@ title: Chang
 metaTitle: Chang - on-chain participatory governance
 ---
 
-The Chang upgrade ushered in the Conway ledger era, a deeply transformative advancement for Cardano's governance, where any ada holder can submit or participate in the voting process for governance actions. The upgrade is happening in two stages, Chang #1 and Chang #2, now known as the Plomin hard fork.
+The Chang upgrade ushered in the Conway ledger era, a deeply transformative advancement for Cardano's governance, where any ada holder can submit or participate in the voting process for governance actions. The upgrade happened in two stages, Chang #1 and Chang #2, now known as the Plomin hard fork.
 
 Conway, named after the eminent mathematician [John Horton Conway](https://en.wikipedia.org/wiki/John_Horton_Conway), builds upon previous phases, emphasizing decentralized decision-making and enhanced smart contract functionalities.
 
@@ -17,7 +17,7 @@ Learn more about Cardano governance and related terminology in [CIP-1694](https:
 
 :::
 
-Chang enables on-chain participatory governance through the implementation of mechanisms outlined in CIP-1694. This upgrade ensures transparency, inclusivity, and resilience of governance within the Cardano ecosystem. The Conway era is based on liquid democracy, which enables individual empowerment through democratic consent by leveraging a voting process with the option of direct and representative voting. Ada holders can vote individually on every governance matter, or delegate their voting power to [delegate representatives (DReps)](https://iohk.io/en/blog/posts/2022/04/11/introducing-the-concept-of-delegate-representatives-dreps/) they trust in decision making. DReps consolidate the voting influence of numerous ada holders, ensuring that each participant can contribute to the future of Cardano’s development.
+Chang enables on-chain participatory governance through the implementation of mechanisms outlined in CIP-1694. This upgrade ensures transparency, inclusivity, and resilience of governance in the Cardano ecosystem. The Conway era is based on liquid democracy, which enables individual empowerment through democratic consent by leveraging a voting process with the option of direct and representative voting. Ada holders can vote individually on every governance matter, or delegate their voting power to [delegate representatives (DReps)](https://iohk.io/en/blog/posts/2022/04/11/introducing-the-concept-of-delegate-representatives-dreps/) they trust in decision making. DReps consolidate the voting influence of numerous ada holders, ensuring that each participant can contribute to the future of Cardano’s development.
 
 With the introduction of [PlutusV3](https://iohk.io/en/blog/posts/2024/02/12/unlocking-more-opportunities-with-plutus-v3/), Plutus scripts are available for use as part of the governance system, enabling sophisticated voting possibilities like supporting DAOs, for example. Chang also brings advanced Plutus cryptographic primitives, other new primitives, and performance enhancements to the platform. These additions provide developers with a richer smart contract creation toolkit, enhancing both developer and user experiences, and unlocking new possibilities for decentralized applications (DApps) on Cardano.
 
@@ -34,7 +34,7 @@ With the introduction of [PlutusV3](https://iohk.io/en/blog/posts/2024/02/12/unl
 - **Sums of products (SOPs)**. PlutusV3 introduces SOPs, a new approach to encoding data types in Plutus Core. This method improves script efficiency and code generation for Plutus Core compilers, leading to faster program execution and streamlined smart contract development.
 - **Bitwise primitives**. The Chang upgrade brings two new bitwise primitives – \`integerToByteString\` and \`byteStringToInteger\`. Additional primitives will be added to Plutus V1, V2, and V3 with future upgrades. These primitives offer robust capabilities for low-level bit manipulations. This enhances performance optimization, cryptographic support, integer-string conversions, and efficient algorithms and data structures within smart contracts.
 
-## Additional functionalities you can expect
+## Additional functionalities 
 
 Conway also introduces several new functionalities:
 
@@ -45,7 +45,7 @@ Conway also introduces several new functionalities:
 
 ## The Chang upgrade in stages
 
-Chang is gradually implemented in two stages. The first stage established foundational governance features, and the second will emphasize community-driven decision-making and governance.
+Chang was implemented in two stages. The first stage established foundational governance features, and the second will emphasize community-driven decision-making and governance.
 
 **First stage/bootstrapping**
 
@@ -59,27 +59,13 @@ The goal of the first stage is to ensure security and continuity during the gove
 
 **The second stage/on-chain decision making**  
 
-The second stage, which emphasizes decentralized governance, will be initiated by the community after the bootstrap period is complete. The governance action to approve this Plomin hard fork was submitted on chain at the end of epoch 529, December 20, 2025 at 21:44 UTC. [Intersect](https://www.intersectmbo.org/) will oversee, establish, and help facilitate the community in self-government initiatives for the Cardano ecosystem. All governance entities, including DReps, SPOs, and the interim constitutional committee, can vote on governance actions during this stage. The conclusion of this stage will allow for treasury withdrawals.
+The second stage, which emphasized decentralized governance, was initiated by the community after the bootstrap period. The governance action to approve this Plomin hard fork was submitted on chain at the end of epoch 529, December 20, 2025 at 21:44 UTC. [Intersect](https://www.intersectmbo.org/) oversaw, established, and helped facilitate the community in self-government initiatives for the Cardano ecosystem. All governance entities, including DReps, SPOs, and the interim constitutional committee, can vote on governance actions during this stage. The conclusion of this stage allowed for treasury withdrawals.
 
 **The Cardano constitution**
 
 The Cardano Constitutional Convention was held simultaneously in Buenos Aires - Argentina, and Nairobi - Kenya from December 4 to 6, 2024. After 63 workshops across 51 countries, participants came together to refine and strengthen the constitution. The draft constitution was agreed to by 95% of elected delegates. 
 
 The delegate-approved Cardano constitution is the foundational document that translates the community’s values and decisions into a clear set of principles, rules, and responsibilities. It defines the governance framework for the Cardano ecosystem, outlining stakeholders' roles and obligations, including DReps, SPOs, and others. This constitution guides Cardano toward becoming a sustainable platform for Web3 products and services.
-
-## Start testing on SanchoNet
-
-Developers and enthusiasts eager to explore the new features introduced by the Chang upgrade can [begin testing on SanchoNet](https://sancho.network/get-started/).
-
-SanchoNet is the testnet for rolling out governance features for the Cardano blockchain, aligning with the comprehensive CIP-1694 specifications. SanchoNet stands apart from other testnets; it's a vibrant, inclusive, and community-driven platform. Every community member is invited to join SanchoNet and actively contribute to shaping Cardano's governance future.
-
-As SanchoNet advances in its journey of implementation and feature rollout, the community is encouraged to embrace specific roles crucial for testing and refining the governance mechanisms:
-
-1. Testnet ada holders: as a testnet ada holder, your role is paramount. You can engage in crafting and submitting governance actions, and your insights will be invaluable to ensure that the governance system upholds the highest standards of security and efficiency.
-2. SPOs: SPOs are the backbone of any blockchain network, and on SanchoNet, it's no different. As an SPO, you can take charge and run the testnet network with diligence and integrity and by voting on relevant actions. Your feedback will be invaluable.
-3. DReps: DReps are the voice of the broader community. As a representative, your role involves participating in voting on governance actions. You can consider the collective interests of the community as you engage in these important decisions.
-
-SanchoNet is more than just a testnet, it is a playground of opportunities. Within this space, the community can collaboratively create a governance system that is robust, decentralized, and truly community-driven. Your involvement, dedication, and passion will be the driving force behind SanchoNet's success.
 
 ## Chang readiness
 
