--- a/docs/about-cardano/03-learn/08-ouroboros-overview.mdx
+++ b/docs/about-cardano/03-learn/08-ouroboros-overview.mdx
@@ -28,7 +28,8 @@ Ouroboros comes in different versions:
 -   [Ouroboros Praos](https://iohk.io/en/research/library/papers/ouroboros-praosan-adaptively-securesemi-synchronous-proof-of-stake-protocol/)
 -   [Ouroboros Genesis](https://iohk.io/en/research/library/papers/ouroboros-genesiscomposable-proof-of-stake-blockchains-with-dynamic-availability/)
 -   [Ouroboros Crypsinous](https://iohk.io/en/research/library/papers/ouroboros-crypsinousprivacy-preserving-proof-of-stake/)
--   [Ouroboros Chronos](https://iohk.io/en/research/library/papers/ouroboros-chronospermissionless-clock-synchronization-via-proof-of-stake/).
+-   [Ouroboros Chronos](https://iohk.io/en/research/library/papers/ouroboros-chronospermissionless-clock-synchronization-via-proof-of-stake/)
+-   [Ouroboros Leios](https://iohk.io/en/research/library/papers/high-throughput-blockchain-consensus-under-realistic-network-assumptions/).
 
 ### Ouroboros Classic
 
@@ -63,3 +64,11 @@ The fourth iteration of Ouroboros - [Genesis](https://iohk.io/en/research/librar
 [Chronos](https://iohk.io/en/research/library/papers/ouroboros-chronospermissionless-clock-synchronization-via-proof-of-stake/) achieves two goals: first, it shows how blockchain protocols can synchronize clocks securely via a novel time synchronization mechanism and thereby become independent of external time services. Second, it provides a cryptographically secure source of time to other protocols. In short, Chronos makes the ledger more resistant to attacks that target time information.
 
 From an application point of view, Chronos can dramatically boost the resilience of critical telecommunications, transport, and other IT infrastructures that require the synchronization of local time to a unified network clock that has no single point of failure.
+
+### Ouroboros Leios
+
+[Ouroboros Leios](https://iohk.io/en/research/library/papers/high-throughput-blockchain-consensus-under-realistic-network-assumptions/), currently in research and development, is the protocol version designed to increase the network's throughput by optimizing the use of available resources and enabling faster transaction processing and confirmation.
+
+Leios is specifically designed to solve scalability bottlenecks in existing systems by acting as a high-throughput overlay on top of base protocols. It tackles malicious actions like protocol bursts (sudden floods of valid messages to congest the network) and equivocations (double-signing attacks), enabling near-optimal transaction processing while preserving security under real-world network constraints.
+
+Learn more about Leios by visiting its [website](https://leios.cardano-scaling.org/docs/overview).
