--- a/docs/developer-resources/07-release-notes/03-comp-matrix.mdx
+++ b/docs/developer-resources/07-release-notes/03-comp-matrix.mdx
@@ -12,7 +12,7 @@ conjunction with the Cardano component dependencies definition.
 If you only require using the node, such as interacting directly with the node
 or managing stake pool operations, we recommend the latest node version.
 If you need compatibility with all components, we recommend using
-version [10.1.4](https://github.com/IntersectMBO/cardano-node/releases/tag/9.1.1).
+version 10.1.4.
 
 | [Cardano node](https://github.com/IntersectMBO/cardano-node/releases)                          | [Cardano DB Sync](https://github.com/IntersectMBO/cardano-db-sync/releases)                                                                                                                                                         | [Cardano Rosetta server](https://github.com/cardano-foundation/cardano-rosetta/releases)                                                                            | [Cardano Rosetta Java](https://github.com/cardano-foundation/cardano-rosetta-java)     | [Cardano GraphQL](https://github.com/cardano-foundation/cardano-graphql/releases)                                                                                   | [Cardano wallet](https://github.com/cardano-foundation/cardano-wallet/releases)                                                                                                         |
 |------------------------------------------------------------------------------------------------|-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|---------------------------------------------------------------------------------------------------------------------------------------------------------------------|:---------------------------------------------------------------------------------------|---------------------------------------------------------------------------------------------------------------------------------------------------------------------|-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
