Fix broken links
Fix a link to the hard fork glossary entry

--- a/docs/about-cardano/04-explore-more/11-parameter-guide.mdx
+++ b/docs/about-cardano/04-explore-more/11-parameter-guide.mdx
@@ -9,7 +9,7 @@ Examples of important Cardano protocol parameters include the maximum block size
 
 The Voltaire governance system for Cardano aims to provide a flexible and adaptable framework that can evolve over time. This includes monitoring and changing the various protocol parameters. The collaboration of founding entities (Input Output Global, the Cardano Foundation, and EMURGO) with the community allows for a decentralized approach to governance and decision making. Cardano can then respond to changing conditions and optimize its performance and functionality to meet the needs of its users.
 
-Additionally, the use of protocol parameters allows for agility and innovation within the network, as new ideas and proposals can be tested and implemented without requiring a [hard fork](https://www.essentialcardano.io/glossary/hard-fork) or other disruptive changes to the network's architecture. This enables Cardano to remain at the forefront of blockchain technology and provide a robust and sustainable infrastructure for decentralized applications (DApps) and services.
+Additionally, the use of protocol parameters allows for agility and innovation within the network, as new ideas and proposals can be tested and implemented without requiring a [hard fork](https://www.essentialcardano.io/glossary/hard-fork-8ec38ffc) or other disruptive changes to the network's architecture. This enables Cardano to remain at the forefront of blockchain technology and provide a robust and sustainable infrastructure for decentralized applications (DApps) and services.
 
 ## Types of protocol parameters on Cardano
 
