Fix a link to relay configurations

--- a/docs/stake-pool-operators/04-node-connectivity.mdx
+++ b/docs/stake-pool-operators/04-node-connectivity.mdx
@@ -45,7 +45,7 @@ required for block generation. It only connects to its relay nodes.
 Developer resources:
 
 - [Stake pool networking](https://developers.cardano.org/docs/operate-a-stake-pool/stake-pool-networking)
-- [Cardano relay configuration](https://developers.cardano.org/docs/operate-a-stake-pool/cardano-relay-configuration)
-- [Configurations and setup](https://cardano-course.gitbook.io/cardano-course/handbook/create-a-stake-pool/the-setup)
+- [Cardano relay configuration](https://developers.cardano.org/docs/operate-a-stake-pool/relay-node-configuration)
+- [Configurations and setup](https://cardano-course.gitbook.io/cardano-course/handbook/create-a-stake-pool/the-setup).
 
 :::
