--- a/docs/cardano-testnets/02-getting-started.mdx
+++ b/docs/cardano-testnets/02-getting-started.mdx
@@ -37,8 +37,7 @@ technical expertise, and personal preferences.
 For more information on the various options, see:
 
 - [Installing the node](https://developers.cardano.org/docs/get-started/cardano-node/installing-cardano-node)
-- [Cardano course: building the node](https://cardano-course.gitbook.io/cardano-course/handbook/module-1-build-and-run-the-node/building-the-node)
-- [Node installation process](https://developers.cardano.org/docs/operate-a-stake-pool/node-installation-process).
+- [Cardano course: building the node](https://cardano-course.gitbook.io/cardano-course/handbook/module-1-build-and-run-the-node/building-the-node).
 
 ## Configurations
 
