--- a/docs/developer-resources/welcome.mdx
+++ b/docs/developer-resources/welcome.mdx
@@ -39,9 +39,8 @@ There are various ways to interact with the Cardano node:
   (JavaScript).
 
 You can also rely on third-party services and managed API query layers such as
-[Blockfrost](https://blockfrost.io/), [Koios,](https://www.koios.rest/)
-[Maestro](https://www.gomaestro.org/), or
-[FreeLoaderz](https://freeloaderz.gitbook.io/freeloaderz-docs/).
+[Blockfrost](https://blockfrost.io/), [Koios,](https://www.koios.rest/) or
+[Maestro](https://www.gomaestro.org/). 
 
 For more tools, refer to the most commonly used
 [builder tools](https://developers.cardano.org/tools) on the developer portal or
