--- a/docs/about-cardano/06-governance-overview.mdx
+++ b/docs/about-cardano/06-governance-overview.mdx
@@ -4,7 +4,7 @@ metaTitle: Governance overview
 ---
 Governance in Cardano has evolved significantly since the introduction of Cardano Improvement Proposal #1694 ([CIP-1694](https://cips.cardano.org/cip/CIP-1694)), which laid the foundation for a more decentralized and community-driven decision-making process. Named after the birth year of the philosopher Voltaire, this proposal marks the transition to the [Voltaire development phase](https://roadmap.cardano.org/en/voltaire/), where governance is self-sustaining and controlled by the Cardano community.
 
-CIP-1694 introduces a tripartite governance structure consisting of delegated representatives (DReps), the constitutional committee, and [stake pool operators (SPOs)](https://docs.cardano.org/about-cardano/learn/stake-pools). These bodies work together to review and approve governance actions, which can be submitted by anyone, ensuring a transparent and democratic process. 
+CIP-1694 introduces a tripartite governance structure consisting of delegated representatives (DReps), the constitutional committee, and [stake pool operators (SPOs)](/stake-pool-operators/about-stake-pools). These bodies work together to review and approve governance actions, which can be submitted by anyone, ensuring a transparent and democratic process. 
 
 Cardano’s self-sustaining governance requires the following roles to function properly:
 
