Fix broken links

--- a/docs/developer-resources/03-transaction-tutorials/index.mdx
+++ b/docs/developer-resources/03-transaction-tutorials/index.mdx
@@ -49,8 +49,8 @@ In this section, you will find tutorials on how to create:
 - [Building and signing transactions](https://github.com/input-output-hk/cardano-node-wiki/blob/main/docs/reference/building-and-signing-tx.md)
 - [Diagnosing transaction problems and troubleshooting](https://github.com/input-output-hk/cardano-node-wiki/blob/main/docs/reference/diagnosing-transactions.md)
 - [Transaction metadata](https://github.com/input-output-hk/cardano-node-wiki/blob/main/docs/reference/tx-metadata.md)
-- [Scripts](https://github.com/input-output-hk/cardano-node-wiki/blob/main/docs/reference/simple-scripts.md)
-- [Multi-asset support](https://github.com/input-output-hk/cardano-node-wiki/blob/main/docs/reference/native-tokens/01-multi-assets.md)
+- [Simple scripts](https://developers.cardano.org/docs/get-started/cardano-cli/simple-scripts/)
+- [Native assets](https://developers.cardano.org/docs/get-started/cardano-cli/native-assets/)
 - [Cardano governance update proposals](https://github.com/input-output-hk/cardano-node-wiki/blob/main/docs/reference/cardano-governance.md)
 - [Creating Cardano testnets](https://github.com/input-output-hk/cardano-node-wiki/blob/main/docs/reference/create-cardano.md)
 
@@ -63,7 +63,7 @@ In this section, you will find tutorials on how to create:
 - [Babbage withdrawing script example](https://github.com/input-output-hk/cardano-node-wiki/blob/main/docs/reference/plutus/babbage-withdrawing-script-example.md)
 
 > Note: For more information about Plutus, tutorials, and how-to guides go to
-> [Plutus Docs](https://plutus.readthedocs.io/en/latest/).
+> [Plinth user guide](https://plutus.readthedocs.io/en/latest/).
 
 **Vasil tutorials**
 
