--- a/docs/about-cardano/03-learn/04-delegation.mdx
+++ b/docs/about-cardano/03-learn/04-delegation.mdx
@@ -42,7 +42,7 @@ addresses using a
 [staking key](https://github.com/input-output-hk/cardano-rosetta/tree/master/examples#staking-key-registration-and-delegation)
 before posting the registration certificate for that key. Note that the stake
 address can be based either on a single key or on a script such as
-[multi-sig](https://github.com/input-output-hk/cardano-node-wiki/blob/main/docs/reference/simple-scripts.md#multi-signature-scripts).
+[multi-sig](https://developers.cardano.org/docs/get-started/cardano-cli/simple-scripts/#multi-signature-scripts).
 
 ## Delegation scheme
 
