Delete a broken link

--- a/docs/about-cardano/02-new-to-cardano/06-cardano-tracking-tools.mdx
+++ b/docs/about-cardano/02-new-to-cardano/06-cardano-tracking-tools.mdx
@@ -14,7 +14,7 @@ There is a list of available [Cardano explorers](https://explorer.cardano.org). 
 fetch data from the main database and reflect it in a straightforward and
 convenient web interface.
 
-Explorers usually show [epoch](https://www.essentialcardano.io/glossary/epoch-1e938a90) details, which include:
+Explorers usually show epoch details, which include:
 
 - a number of blocks produced during this epoch
 - time the epoch started
