Fix broken links in 01-plutus.mdx -

--- a/docs/developer-resources/05-smart-contracts/01-plutus.mdx
+++ b/docs/developer-resources/05-smart-contracts/01-plutus.mdx
@@ -8,8 +8,8 @@ sidebar_position: 1
 
 To start developing with Plutus, see:
 
-- [Plutus Core documentation](https://plutus.readthedocs.io/en/latest/index.html)
-- [Developer portal Plutus overview](https://developers.cardano.org/docs/smart-contracts/plutus)
+- [Plutus Core documentation](https://plutus.cardano.intersectmbo.org/docs/)
+- [Developer portal Plinth overview](https://developers.cardano.org/docs/smart-contracts/plinth)
 - 'Plutus resources' below for more details.
 
 :::
@@ -144,15 +144,8 @@ explanations, tutorials, how-to guides, etc.
 **Documentation**:
 
 - [Plutus Core and Plutus Tx user guide](https://plutus.readthedocs.io/en/latest/):
-  introduces the Plutus Core programming language and programming with Plutus
-  Tx. Documentation includes explanations, tutorials, how-to instructions,
+  introduces the Plutus Core programming language and programming with Plinth. Documentation includes explanations, tutorials, how-to instructions,
   troubleshooting, and reference information:
-
-  - [explanations](https://plutus.readthedocs.io/en/latest/explanations/index.html)
-  - [tutorials](https://plutus.readthedocs.io/en/latest/tutorials/index.html)
-  - [how-to guides](https://plutus.readthedocs.io/en/latest/howtos/index.html)
-  - [troubleshooting](https://plutus.readthedocs.io/en/latest/troubleshooting.html)
-  - [reference](https://plutus.readthedocs.io/en/latest/reference/index.html)
 
 - [Video presentation on the Plutus Platform](https://www.youtube.com/watch?v=usMPt8KpBeI&feature=youtu.be):
   in this session from the 2020 Cardano Summit, Michael Peyton-Jones walks us
@@ -160,23 +153,23 @@ explanations, tutorials, how-to guides, etc.
   Plutus Application Platform, where assets can be built and launched. He also
   demonstrates how tokens can be transferred using a smart contract.
 
-## Plutus Pioneer Program
+## Plutus Pioneer program
 
-- [Plutus Pioneer Program](https://github.com/input-output-hk/plutus-pioneer-program#readme):
+- [Plutus Pioneer program](https://github.com/input-output-hk/plutus-pioneer-program#readme):
   includes lectures, examples, and exercises
-- [Plutus Pioneer Program notes and documentation](https://plutus-pioneer-program.readthedocs.io/en/latest/)
+- [Plutus Pioneer program notes and documentation](https://plutus-pioneer-program.readthedocs.io/en/latest/)
 - ['plutus-pioneer-program' questions on Cardano Stack Exchange](https://cardano.stackexchange.com/questions/tagged/plutus-pioneer-program)
 - [Plutus Pioneer Discord](https://discord.com/channels/826816523368005654/826836848520200233)
 
 **Plutus Pioneer community notes**:
 
-- [How to prepare for the Plutus Pioneer Program](https://www.essentialcardano.io/article/how-to-prepare-for-the-plutus-pioneer-program)
-- [Essential Resources and Documentation for the Plutus Pioneer Program](https://www.essentialcardano.io/article/essential-resources-and-documentation-for-the-plutus-pioneer-program)
-- [Plutus Pioneer Program Part 1: Understanding the eUTXO Model and Coding the first Smart Contract](https://www.essentialcardano.io/article/plutus-pioneer-program-part-1-understanding-the-eutxo-model-and-coding-the-first-smart-contract)
-- [Plutus Pioneer Program - Part 2: How to “deploy” a Smart Contract in Cardano](https://www.essentialcardano.io/article/plutus-pioneer-program-part-2-how-to-deploy-a-smart-contract-in-cardano)
-- [Plutus Pioneer Program - Part 3: How to Mint and Burn Tokens and NFTs in Cardano](https://www.essentialcardano.io/article/plutus-pioneer-program-part-3-how-to-mint-and-burn-tokens-and-nfts-in-cardano)
-- [Plutus Pioneer Program - Part 4: State Machine with Plutus (1/2)](https://www.essentialcardano.io/article/plutus-pioneer-program-part-4-state-machine-with-plutus-12)
-- [Plutus Pioneer Program - Part 5: State Machine with Plutus (2/2)](https://www.essentialcardano.io/article/plutus-pioneer-program-part-5-state-machine-with-plutus-22)
+- [How to prepare for the Plutus Pioneer program](https://www.essentialcardano.io/article/how-to-prepare-for-the-plutus-pioneer-program)
+- [Essential resources and documentation for the Plutus Pioneer program](https://www.essentialcardano.io/article/essential-resources-and-documentation-for-the-plutus-pioneer-program)
+- [Plutus Pioneer program part 1: understanding the EUTXO model and coding the first smart contract](https://www.essentialcardano.io/article/plutus-pioneer-program-part-1-understanding-the-eutxo-model-and-coding-the-first-smart-contract)
+- [Plutus Pioneer program - part 2: how to 'deploy' a smart contract on Cardano](https://www.essentialcardano.io/article/plutus-pioneer-program-part-2-how-to-deploy-a-smart-contract-in-cardano)
+- [Plutus Pioneer program - part 3: how to mint and burn tokens and NFTs on Cardano](https://www.essentialcardano.io/article/plutus-pioneer-program-part-3-how-to-mint-and-burn-tokens-and-nfts-in-cardano)
+- [Plutus Pioneer program - part 4: state machine with Plutus (1/2)](https://www.essentialcardano.io/article/plutus-pioneer-program-part-4-state-machine-with-plutus-12)
+- [Plutus Pioneer program - part 5: state machine with Plutus (2/2)](https://www.essentialcardano.io/article/plutus-pioneer-program-part-5-state-machine-with-plutus-22)
 
 ## Plutus community resources
 
