--- a/docs/developer-resources/03-transaction-tutorials/index.mdx
+++ b/docs/developer-resources/03-transaction-tutorials/index.mdx
@@ -49,8 +49,8 @@ In this section, you will find tutorials on how to create:
 - [Building and signing transactions](https://github.com/input-output-hk/cardano-node-wiki/blob/main/docs/reference/building-and-signing-tx.md)
 - [Diagnosing transaction problems and troubleshooting](https://github.com/input-output-hk/cardano-node-wiki/blob/main/docs/reference/diagnosing-transactions.md)
 - [Transaction metadata](https://github.com/input-output-hk/cardano-node-wiki/blob/main/docs/reference/tx-metadata.md)
-- [Simple scripts](https://developers.cardano.org/docs/get-started/cardano-cli/simple-scripts/)
-- [Native assets](https://developers.cardano.org/docs/get-started/cardano-cli/native-assets/)
+- [Simple transactions](https://developers.cardano.org/docs/get-started/create-simple-transaction/)
+- [Native assets](https://developers.cardano.org/docs/native-tokens/)
 - [Cardano governance update proposals](https://github.com/input-output-hk/cardano-node-wiki/blob/main/docs/reference/cardano-governance.md)
 - [Creating Cardano testnets](https://github.com/input-output-hk/cardano-node-wiki/blob/main/docs/reference/create-cardano.md)
 
