--- a/docs/about-cardano/03-learn/08-ouroboros-overview.mdx
+++ b/docs/about-cardano/03-learn/08-ouroboros-overview.mdx
@@ -71,4 +71,4 @@ From an application point of view, Chronos can dramatically boost the resilience
 
 Leios is specifically designed to solve scalability bottlenecks in existing systems by acting as a high-throughput overlay on top of base protocols. It tackles malicious actions like protocol bursts (sudden floods of valid messages to congest the network) and equivocations (double-signing attacks), enabling near-optimal transaction processing while preserving security under real-world network constraints.
 
-Learn more about Leios by visiting its [website](https://leios.cardano-scaling.org/docs/overview).
+Learn more about Leios by visiting its [website](https://leios.cardano-scaling.org/).
